Ejercicios de Padding

--- a/Ejercicio 1/index.html
+++ b/Ejercicio 1/index.html
@@ -5,15 +5,35 @@
 	<title>Ejercicio 1</title>
 	<link rel="stylesheet" href="css/main.css">
 	<style>
-		body{}
-		h1{}
-		a{}
-		a:hover{}
-
-		#main-container{}
-		#content{}
-		#descripcion{}
-		#boton-content{}
+		body{
+			background-image: url(img/fondo.jpg);
+			font-family: Arial;
+		}
+		h1{
+			border-bottom: dotted 2px #ccc;
+			text-align: center;
+		}
+		a{
+			background-color: red;
+			color: white;
+			text-decoration: none;
+		}
+		a:hover{
+			background-color: blue;
+		}
+		#main-container{
+			width: 500px;
+		}
+		#content{
+			background-color: white;
+		}
+		#descripcion{
+			color: #666;
+			font-size: 0.8125em;
+		}
+		#boton-content{
+			text-align: center;
+		}
 		
 	</style>
 </head>
