Archivos originales para trabajar

--- a/Padding/ejemplo2.html
+++ b/Padding/ejemplo2.html
@@ -13,21 +13,7 @@
 		}
 		#container{
 			background-color: white;
-			padding: 20px;
 			width: 400px;
-		}
-
-		.campo{
-			padding: 20px 0;
-		}
-
-		.campo input, .campo textarea{
-			padding: 10px;
-			width: 350px;
-		}
-
-		.boton{
-			border: 0;
 		}
 	</style>
 </head>
@@ -35,16 +21,16 @@
 	<div id="main">
 		<div id="container">
 			<div class="campo">
-				Nombre: <p><input type="text" placeholder="Escribe tu nombre"></p>
+				Nombre: <br /><input type="text" placeholder="Escribe tu nombre"><br />
 			</div>
 			<div class="campo">
-				Correo electrónico: <p><input type="text" placeholder="usuario@example.com"></p>
+				Correo electrónico: <br /><input type="text" placeholder="usuario@example.com"><br />
 			</div>
 			<div class="campo">
-				Comentarios: <p><textarea></textarea></p>
+				Comentarios: <br/><textarea></textarea><br />
 			</div>
 			<div class="campo">
-				<input type="submit" class="boton" value="Enviar datos">
+				<input type="submit" value="Enviar datos">
 			</div>
 		</div>
 	</div>
